{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 35,
  "lineage": "cab1367a-a3bf-849e-f073-54d732686fdc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dce5ab08165c2a73",
            "association_id": "eipassoc-099370be4ab056e16",
            "domain": "vpc",
            "id": "eipalloc-0dce5ab08165c2a73",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-00e645e33714b20b8",
            "private_dns": "ip-10-2-11-61.eu-west-2.compute.internal",
            "private_ip": "10.2.11.61",
            "public_dns": "ec2-3-11-141-29.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.11.141.29",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d45ec7efdaa1a385",
            "association_id": "eipassoc-07ee4d9e71b6feddd",
            "domain": "vpc",
            "id": "eipalloc-0d45ec7efdaa1a385",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0d6406fa3c6920d97",
            "private_dns": "ip-10-2-21-39.eu-west-2.compute.internal",
            "private_ip": "10.2.21.39",
            "public_dns": "ec2-18-133-89-106.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.133.89.106",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e3fc84f35e7cbb2",
            "association_id": "eipassoc-06f88f213b3e7400b",
            "domain": "vpc",
            "id": "eipalloc-08e3fc84f35e7cbb2",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0b8ce2b3ef41fad1c",
            "private_dns": "ip-10-2-31-90.eu-west-2.compute.internal",
            "private_ip": "10.2.31.90",
            "public_dns": "ec2-18-130-84-223.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.84.223",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:internet-gateway/igw-06da748c34e283237",
            "id": "igw-06da748c34e283237",
            "owner_id": "296134751514",
            "tags": {
              "Name": "ce_cloud_terraform"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform"
            },
            "vpc_id": "vpc-0708166025c581589"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dce5ab08165c2a73",
            "association_id": "eipassoc-099370be4ab056e16",
            "connectivity_type": "public",
            "id": "nat-0d2a57d3ba1fe64d0",
            "network_interface_id": "eni-00e645e33714b20b8",
            "private_ip": "10.2.11.61",
            "public_ip": "3.11.141.29",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f13dd6de84ffc06c"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d45ec7efdaa1a385",
            "association_id": "eipassoc-07ee4d9e71b6feddd",
            "connectivity_type": "public",
            "id": "nat-0a936591b995adf93",
            "network_interface_id": "eni-0d6406fa3c6920d97",
            "private_ip": "10.2.21.39",
            "public_ip": "18.133.89.106",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00c57432472b1a3ad"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e3fc84f35e7cbb2",
            "association_id": "eipassoc-06f88f213b3e7400b",
            "connectivity_type": "public",
            "id": "nat-07740b3d40cc72d4d",
            "network_interface_id": "eni-0b8ce2b3ef41fad1c",
            "private_ip": "10.2.31.90",
            "public_ip": "18.130.84.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-086f46541bdd200ad"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eips",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c033bef572e59a081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d2a57d3ba1fe64d0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c033bef572e59a08",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eips",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.private_route_tables",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f8f752ab9282882a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a936591b995adf93",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f8f752ab9282882a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eips",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.private_route_tables",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0299a1ba76a193d2b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07740b3d40cc72d4d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0299a1ba76a193d2b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eips",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.private_route_tables",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06da748c34e283237",
            "id": "r-rtb-0603e80070f76afb41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0603e80070f76afb4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:route-table/rtb-0c033bef572e59a08",
            "id": "rtb-0c033bef572e59a08",
            "owner_id": "296134751514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d2a57d3ba1fe64d0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ce_cloud_terraform Private Routes (AZ1)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Private Routes (AZ1)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0708166025c581589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:route-table/rtb-0f8f752ab9282882a",
            "id": "rtb-0f8f752ab9282882a",
            "owner_id": "296134751514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a936591b995adf93",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ce_cloud_terraform Private Routes (AZ2)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Private Routes (AZ2)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0708166025c581589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:route-table/rtb-0299a1ba76a193d2b",
            "id": "rtb-0299a1ba76a193d2b",
            "owner_id": "296134751514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07740b3d40cc72d4d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ce_cloud_terraform Private Routes (AZ3)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Private Routes (AZ3)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0708166025c581589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:route-table/rtb-0603e80070f76afb4",
            "id": "rtb-0603e80070f76afb4",
            "owner_id": "296134751514",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06da748c34e283237",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ce_cloud_terraform Public Routes"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Public Routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0708166025c581589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e4c967babbf38a8",
            "route_table_id": "rtb-0c033bef572e59a08",
            "subnet_id": "subnet-0799ffae6ff1c3245"
          },
          "dependencies": [
            "aws_route_table.private_route_tables",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4f03721f02ad3f6",
            "route_table_id": "rtb-0f8f752ab9282882a",
            "subnet_id": "subnet-015c100ef46b5f6f1"
          },
          "dependencies": [
            "aws_route_table.private_route_tables",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4809e6a26d68301",
            "route_table_id": "rtb-0299a1ba76a193d2b",
            "subnet_id": "subnet-0f7cad819d461711a"
          },
          "dependencies": [
            "aws_route_table.private_route_tables",
            "aws_subnet.private_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4d40a14a06f5e17",
            "route_table_id": "rtb-0603e80070f76afb4",
            "subnet_id": "subnet-0f13dd6de84ffc06c"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055b545a78f82c574",
            "route_table_id": "rtb-0603e80070f76afb4",
            "subnet_id": "subnet-00c57432472b1a3ad"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086587f85b4558384",
            "route_table_id": "rtb-0603e80070f76afb4",
            "subnet_id": "subnet-086f46541bdd200ad"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "no_ingress_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:security-group/sg-02fe19dd511d609e2",
            "description": "Security group with no ingress rule",
            "egress": [],
            "id": "sg-02fe19dd511d609e2",
            "ingress": [],
            "name": "no-ingress-sg-20230825113745363000000001",
            "name_prefix": "no-ingress-sg-",
            "owner_id": "296134751514",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0708166025c581589"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:subnet/subnet-0799ffae6ff1c3245",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.2.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0799ffae6ff1c3245",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296134751514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ce_cloud_terraform Private Subnet (AZ1)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Private Subnet (AZ1)"
            },
            "vpc_id": "vpc-0708166025c581589"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:subnet/subnet-015c100ef46b5f6f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.2.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015c100ef46b5f6f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296134751514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ce_cloud_terraform Private Subnet (AZ2)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Private Subnet (AZ2)"
            },
            "vpc_id": "vpc-0708166025c581589"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:subnet/subnet-0f7cad819d461711a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.2.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7cad819d461711a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296134751514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ce_cloud_terraform Private Subnet (AZ3)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Private Subnet (AZ3)"
            },
            "vpc_id": "vpc-0708166025c581589"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:subnet/subnet-0f13dd6de84ffc06c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.2.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f13dd6de84ffc06c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296134751514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ce_cloud_terraform Public Subnet (AZ1)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Public Subnet (AZ1)"
            },
            "vpc_id": "vpc-0708166025c581589"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:subnet/subnet-00c57432472b1a3ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.2.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c57432472b1a3ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296134751514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ce_cloud_terraform Public Subnet (AZ2)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Public Subnet (AZ2)"
            },
            "vpc_id": "vpc-0708166025c581589"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:subnet/subnet-086f46541bdd200ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.2.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086f46541bdd200ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296134751514",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ce_cloud_terraform Public Subnet (AZ3)"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform Public Subnet (AZ3)"
            },
            "vpc_id": "vpc-0708166025c581589"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:296134751514:vpc/vpc-0708166025c581589",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-047ec1557bb593849",
            "default_route_table_id": "rtb-06f0e3e19d1d5f268",
            "default_security_group_id": "sg-0b104f4a656eef03a",
            "dhcp_options_id": "dopt-08a2e49718a887dec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0708166025c581589",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06f0e3e19d1d5f268",
            "owner_id": "296134751514",
            "tags": {
              "Name": "ce_cloud_terraform"
            },
            "tags_all": {
              "Name": "ce_cloud_terraform"
            }
          }
        }
      ]
    }
  ]
}